[workspace]
resolver = "2"

members = ["examples/rust/indicators", "fuzz"]
exclude = []

[workspace.package]
version = "0.1.0"

[package]
version.workspace = true
name = "technicalysis"
description = "Technical analysis library for financial market trading applications"
edition = "2021"
rust-version = "1.84"
license = "BSD-3-Clause"
repository = "https://github.com/Guitheg/technicalysis.git"
authors = ["Guillaume GOBIN <gthgobin@gmail.com>"]

[features]
default = []
python = ["pyo3", "numpy"]

[lib]
name = "technicalysis"
path = "core/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.3.1"
float-cmp = "0.10.0"
numpy = { version = "0.24.0", optional = true }
paste = "1.0.15"
pyo3 = { version = "0.24.2", optional = true, features = ["extension-module"] }

[dev-dependencies]
proptest = "1.6.0"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.1"

[[bench]]
name = "bench"
harness = false
path = "benches/rust/bench.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
debug = false
panic = "unwind"
