[package]
name = "techalysis-fuzz"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.techalysis]
path = "../../crates/core"

[[bin]]
name = "sma"
path = "fuzz_targets/fuzz_sma.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ema"
path = "fuzz_targets/fuzz_ema.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rsi"
path = "fuzz_targets/fuzz_rsi.rs"
test = false
doc = false
bench = false

[[bin]]
name = "macd"
path = "fuzz_targets/fuzz_macd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bbands"
path = "fuzz_targets/fuzz_bbands.rs"
test = false
doc = false
bench = false